feat: Configuración inicial del proyecto
- Creación de la estructura base del proyecto React Native
- Configuración inicial de navegación
- Configuración de autenticación con Auth0
- Creación de estructura de componentes básicos

--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.eventsbga.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -32,10 +33,19 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "1574b3a7-af1e-4d74-8f60-bfcf7263bcbb"
+      }
     }
   }
 }
