--- a/app.json
+++ b/app.json
@@ -98,10 +98,12 @@
         }
       ]
     ],
-
     "extra": {
+      "router": {
+        "origin": false
+      },
       "eas": {
-        "projectId": "79449c76-f236-460d-bb22-60b95f30211e"
+        "projectId": "08ace7e4-1145-4097-9436-68b4ba1e5b0c"
       }
     }
   }
