--- a/eas.json
+++ b/eas.json
@@ -7,7 +7,10 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "GOOGLE_MAPS_API_KEY": "AIzaSyCMU89H8fISyKNOMSt2bSy0wtWdfFjs4Ag"
+      }
     },
     "preview": {
       "android":{
@@ -18,11 +21,15 @@
         "NODE_ENV": "production",
         "EXPO_NO_CACHE": "1",
         "EXPO_CLEAR_CACHE": "1",
-        "BACKEND_URL": "https://backend-eventsbga-production.up.railway.app"
+        "BACKEND_URL": "https://backend-eventsbga-production.up.railway.app",
+        "GOOGLE_MAPS_API_KEY": "AIzaSyCMU89H8fISyKNOMSt2bSy0wtWdfFjs4Ag"
       }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "GOOGLE_MAPS_API_KEY": "AIzaSyCMU89H8fISyKNOMSt2bSy0wtWdfFjs4Ag"
+      }
     }
   },
   "submit": {
